Reload and evaluation